modules/gob-hanson-format/parse-hanson-string.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict"

function peg$subclass(child, parent) {
  function ctor() {
    this.constructor = child
  }
  ctor.prototype = parent.prototype
  child.prototype = new ctor()
}

function peg$SyntaxError(message, expected, found, location) {
  this.message = message
  this.expected = expected
  this.found = found
  this.location = location
  this.name = "SyntaxError"

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError)
  }
}

peg$subclass(peg$SyntaxError, Error)

peg$SyntaxError.buildMessage = function (expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function (expectation) {
      return '"' + literalEscape(expectation.text) + '"'
    },

    class: function (expectation) {
      var escapedParts = "",
        i

      for (i = 0; i < expectation.parts.length; i++) {
        escapedParts +=
          expectation.parts[i] instanceof Array ?
            classEscape(expectation.parts[i][0]) +
            "-" +
            classEscape(expectation.parts[i][1])
          : classEscape(expectation.parts[i])
      }

      return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]"
    },

    any: function (expectation) {
      return "any character"
    },

    end: function (expectation) {
      return "end of input"
    },

    other: function (expectation) {
      return expectation.description
    },
  }

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase()
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g, '\\"')
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g, function (ch) {
        return "\\x0" + hex(ch)
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return "\\x" + hex(ch)
      })
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g, "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g, function (ch) {
        return "\\x0" + hex(ch)
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return "\\x" + hex(ch)
      })
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation)
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
      i,
      j

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i])
    }

    descriptions.sort()

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i]
          j++
        }
      }
      descriptions.length = j
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0]

      case 2:
        return descriptions[0] + " or " + descriptions[1]

      default:
        return (
          descriptions.slice(0, -1).join(", ") +
          ", or " +
          descriptions[descriptions.length - 1]
        )
    }
  }

  function describeFound(found) {
    return found ? '"' + literalEscape(found) + '"' : "end of input"
  }

  return (
    "Expected " +
    describeExpected(expected) +
    " but " +
    describeFound(found) +
    " found."
  )
}

function peg$parse(input, options) {
  options = options !== void 0 ? options : {}

  var peg$FAILED = {},
    peg$startRuleFunctions = {
      Result: peg$parseResult,
      Filter: peg$parseFilter,
    },
    peg$startRuleFunction = peg$parseResult,
    peg$c0 = peg$otherExpectation("expression"),
    peg$c1 = function (expr) {
      return expr
    },
    peg$c2 = "s",
    peg$c3 = peg$literalExpectation("s", false),
    peg$c4 = "course",
    peg$c5 = peg$literalExpectation("course", false),
    peg$c6 = "where",
    peg$c7 = peg$literalExpectation("where", false),
    peg$c8 = function (count, distinct, where) {
      return {
        $type: "where",
        $count: count,
        $where: where,
        $distinct: distinct,
      }
    },
    peg$c9 = "only",
    peg$c10 = peg$literalExpectation("only", false),
    peg$c11 = "courses",
    peg$c12 = peg$literalExpectation("courses", false),
    peg$c13 = function (distinct, where) {
      return { $where: where, $filterType: "where" }
    },
    peg$c14 = "from",
    peg$c15 = peg$literalExpectation("from", false),
    peg$c16 = function (distinct, ofList) {
      return { $of: ofList, $filterType: "of" }
    },
    peg$c17 = function (distinct, filter) {
      return assign({}, filter, { $distinct: distinct, $type: "filter" })
    },
    peg$c18 = "occurrence",
    peg$c19 = peg$literalExpectation("occurrence", false),
    peg$c20 = "of",
    peg$c21 = peg$literalExpectation("of", false),
    peg$c22 = function (count, course) {
      return {
        $type: "occurrence",
        $count: count,
        $course: course.$course,
      }
    },
    peg$c23 = "{",
    peg$c24 = peg$literalExpectation("{", false),
    peg$c25 = "}",
    peg$c26 = peg$literalExpectation("}", false),
    peg$c27 = function (q) {
      return q
    },
    peg$c28 = peg$otherExpectation("qualification-or"),
    peg$c29 = "|",
    peg$c30 = peg$literalExpectation("|", false),
    peg$c31 = function (lhs, rhs) {
      return {
        $type: "boolean",
        $booleanType: "or",
        $or: [lhs].concat("$or" in rhs ? rhs.$or : [rhs]),
      }
    },
    peg$c32 = peg$otherExpectation("qualification-and"),
    peg$c33 = "&",
    peg$c34 = peg$literalExpectation("&", false),
    peg$c35 = function (lhs, rhs) {
      return {
        $type: "boolean",
        $booleanType: "and",
        $and: [lhs].concat("$and" in rhs ? rhs.$and : [rhs]),
      }
    },
    peg$c36 = function (key, op, f, q) {
      return assign({}, f, { $where: q })
    },
    peg$c37 = function (key, op, value) {
      return {
        $type: "qualification",
        $key: key,
        $operator: op,
        $value: value,
      }
    },
    peg$c38 = function (value) {
      return value
    },
    peg$c39 = function (lhs, rhs) {
      return {
        $type: "boolean",
        $booleanType: "or",
        $or: [lhs].concat(rhs.$or ? rhs.$or : [rhs]),
      }
    },
    peg$c40 = function (lhs, rhs) {
      return {
        $type: "boolean",
        $booleanType: "and",
        $and: [lhs].concat(rhs.$and ? rhs.$and : [rhs]),
      }
    },
    peg$c41 = function (num) {
      return num
    },
    peg$c42 = /^[a-z0-9_\-]/i,
    peg$c43 = peg$classExpectation(
      [["a", "z"], ["0", "9"], "_", "-"],
      false,
      true,
    ),
    peg$c44 = function (word) {
      return word.join("")
    },
    peg$c45 = function (name, prop) {
      return {
        $name: name,
        $prop: prop,
        $type: "function",
      }
    },
    peg$c46 = "<=",
    peg$c47 = peg$literalExpectation("<=", false),
    peg$c48 = function () {
      return "$lte"
    },
    peg$c49 = "<",
    peg$c50 = peg$literalExpectation("<", false),
    peg$c51 = function () {
      return "$lt"
    },
    peg$c52 = "==",
    peg$c53 = peg$literalExpectation("==", false),
    peg$c54 = "=",
    peg$c55 = peg$literalExpectation("=", false),
    peg$c56 = function () {
      return "$eq"
    },
    peg$c57 = ">=",
    peg$c58 = peg$literalExpectation(">=", false),
    peg$c59 = function () {
      return "$gte"
    },
    peg$c60 = ">",
    peg$c61 = peg$literalExpectation(">", false),
    peg$c62 = function () {
      return "$gt"
    },
    peg$c63 = "!=",
    peg$c64 = peg$literalExpectation("!=", false),
    peg$c65 = function () {
      return "$ne"
    },
    peg$c66 = peg$otherExpectation("whitespace"),
    peg$c67 = /^[ \n\t\r]/,
    peg$c68 = peg$classExpectation([" ", "\n", "\t", "\r"], false, false),
    peg$c69 = function (count) {
      return { $operator: "$gte", $num: count }
    },
    peg$c70 = "at most",
    peg$c71 = peg$literalExpectation("at most", false),
    peg$c72 = function (count) {
      return { $operator: "$lte", $num: count }
    },
    peg$c73 = "exactly",
    peg$c74 = peg$literalExpectation("exactly", false),
    peg$c75 = function (count) {
      return { $operator: "$eq", $num: count }
    },
    peg$c76 = "zero",
    peg$c77 = peg$literalExpectation("zero", false),
    peg$c78 = "one-point-five",
    peg$c79 = peg$literalExpectation("one-point-five", false),
    peg$c80 = "one",
    peg$c81 = peg$literalExpectation("one", false),
    peg$c82 = "two",
    peg$c83 = peg$literalExpectation("two", false),
    peg$c84 = "three",
    peg$c85 = peg$literalExpectation("three", false),
    peg$c86 = "four",
    peg$c87 = peg$literalExpectation("four", false),
    peg$c88 = "five",
    peg$c89 = peg$literalExpectation("five", false),
    peg$c90 = "six",
    peg$c91 = peg$literalExpectation("six", false),
    peg$c92 = "seven",
    peg$c93 = peg$literalExpectation("seven", false),
    peg$c94 = "eight",
    peg$c95 = peg$literalExpectation("eight", false),
    peg$c96 = "nine",
    peg$c97 = peg$literalExpectation("nine", false),
    peg$c98 = "ten",
    peg$c99 = peg$literalExpectation("ten", false),
    peg$c100 = function (num) {
      if (num === "zero") {
        return 0
      } else if (num === "one") {
        return 1
      } else if (num === "one-point-five") {
        return 1.5
      } else if (num === "two") {
        return 2
      } else if (num === "three") {
        return 3
      } else if (num === "four") {
        return 4
      } else if (num === "five") {
        return 5
      } else if (num === "six") {
        return 6
      } else if (num === "seven") {
        return 7
      } else if (num === "eight") {
        return 8
      } else if (num === "nine") {
        return 9
      } else if (num === "ten") {
        return 10
      } else throw new Error(`invalid number "${num}"`)
    },
    peg$c101 = "!",
    peg$c102 = peg$literalExpectation("!", false),
    peg$c103 = function (value) {
      return {
        $type: "boolean",
        $not: value,
      }
    },
    peg$c104 = ",",
    peg$c105 = peg$literalExpectation(",", false),
    peg$c106 = function (val, second) {
      return second
    },
    peg$c107 = function (val, rest) {
      return [val].concat(rest)
    },
    peg$c108 = function (ofItems) {
      return flatten(ofItems)
    },
    peg$c109 = "all",
    peg$c110 = peg$literalExpectation("all", false),
    peg$c111 = function () {
      return { $operator: "$eq", $was: "all" }
    },
    peg$c112 = "any",
    peg$c113 = peg$literalExpectation("any", false),
    peg$c114 = function () {
      return { $operator: "$gte", $num: 1, $was: "any" }
    },
    peg$c115 = "none",
    peg$c116 = peg$literalExpectation("none", false),
    peg$c117 = function () {
      return { $operator: "$eq", $num: 0, $was: "none" }
    },
    peg$c118 = function (count, ofList) {
      if (count.$was === "all") {
        count.$num = ofList.length
      }

      if (ofList.length < count.$num) {
        throw new Error(
          `you requested ${count.$num} items, but only gave ${ofList.length} options (${JSON.stringify(ofList)}).`,
        )
      }

      return {
        $type: "of",
        $count: count,
        $of: ofList,
      }
    },
    peg$c119 = function (reqs) {
      return flatten(reqs)
    },
    peg$c120 = "credit",
    peg$c121 = peg$literalExpectation("credit", false),
    peg$c122 = "department",
    peg$c123 = peg$literalExpectation("department", false),
    peg$c124 = "term",
    peg$c125 = peg$literalExpectation("term", false),
    peg$c126 = "children",
    peg$c127 = peg$literalExpectation("children", false),
    peg$c128 = function (count, what, besides, where) {
      return { $from: "children-where", $where: where, $children: "$all" }
    },
    peg$c129 = function (count, what, besides) {
      return { $from: "children", $children: "$all" }
    },
    peg$c130 = "filter",
    peg$c131 = peg$literalExpectation("filter", false),
    peg$c132 = function (count, what, besides, where) {
      return { $from: "filter-where", $where: where }
    },
    peg$c133 = function (count, what, besides) {
      return { $from: "filter" }
    },
    peg$c134 = function (count, what, besides, where) {
      return { $from: "where", $where: where }
    },
    peg$c135 = function (count, what, besides, c, w) {
      return { $from: "children-where", $where: w, $children: c }
    },
    peg$c136 = function (count, what, besides, children) {
      return { $from: "children", $children: children }
    },
    peg$c137 = function (count, what, besides, child) {
      return { $from: "children", $children: [child] }
    },
    peg$c138 = function (count, what, besides, from) {
      if (from.$from === "where" && what === "department") {
        throw new Error(
          'cannot use a modifier with "departments" or "department"',
        )
      }
      if (from.$from === "where" && what === "term") {
        throw new Error('cannot use a modifier with "terms" or "term"')
      }
      if (from.$from === "children-where" && what !== "course") {
        throw new Error('must use "courses from" with "children where"')
      }
      if (count.$operator !== "$gte" && what !== "course") {
        throw new Error(
          "can only use at-least style counters with non-course requests",
        )
      }

      let result = assign({}, from, {
        $type: "modifier",
        $count: count,
        $what: what,
      })
      if (besides) {
        result.$besides = besides
      }
      return result
    },
    peg$c139 = "besides",
    peg$c140 = peg$literalExpectation("besides", false),
    peg$c141 = function (course) {
      return course
    },
    peg$c142 = /^[A-Z0-9]/,
    peg$c143 = peg$classExpectation(
      [
        ["A", "Z"],
        ["0", "9"],
      ],
      false,
      false,
    ),
    peg$c144 = /^[A-Za-z0-9_\- \/'.]/,
    peg$c145 = peg$classExpectation(
      [["A", "Z"], ["a", "z"], ["0", "9"], "_", "-", " ", "/", "'", "."],
      false,
      false,
    ),
    peg$c146 = function (initial, rest) {
      return initial + rest.join("")
    },
    peg$c147 = function (title) {
      return title.trim()
    },
    peg$c148 = peg$otherExpectation("requirement reference"),
    peg$c149 = function (a, t) {
      return ` (${t})`
    },
    peg$c150 = function (a, b) {
      return `${a}${b || ""}`
    },
    peg$c151 = function (title) {
      if (options.abbreviations && title in options.abbreviations) {
        title = options.abbreviations[title]
      } else if (options.titles && title in options.titles) {
        title = options.titles[title]
      }
      return {
        $type: "reference",
        $requirement: title,
      }
    },
    peg$c152 = ".",
    peg$c153 = peg$literalExpectation(".", false),
    peg$c154 = function (dept, num, section, year, semester) {
      return { semester }
    },
    peg$c155 = function (dept, num, section, year, sub) {
      return assign({}, sub, { year })
    },
    peg$c156 = function (dept, num, section, sub) {
      return assign({}, sub, { section })
    },
    peg$c157 = function (dept, num, details) {
      return {
        $type: "course",
        $course: assign({}, details, dept || fetchDept(), num),
      }
    },
    peg$c158 = /^[A-Z\/]/,
    peg$c159 = peg$classExpectation([["A", "Z"], "/"], false, false),
    peg$c160 = function (dept) {
      let department = { department: dept.join("") }
      storeDept(department)
      return department
    },
    peg$c161 = peg$otherExpectation("course number"),
    peg$c162 = "I",
    peg$c163 = peg$literalExpectation("I", false),
    peg$c164 = "L",
    peg$c165 = peg$literalExpectation("L", false),
    peg$c166 = function (nums, international, lab) {
      let result = {}

      let number = parseInt(nums.join(""))

      if (international) {
        result.international = true
      }
      if (lab) {
        result.type = "Lab"
      }

      return assign({}, result, { number })
    },
    peg$c167 = function () {
      throw new SyntaxError(
        "A course section must be either an uppercase letter [A-Z] or an asterisk [*].",
      )
    },
    peg$c168 = function (nums) {
      return parseInt(nums.join(""))
    },
    peg$c169 = function () {
      throw new SyntaxError(
        "A course year must be either a four-digit year [e.g. 1994] or an asterisk [*].",
      )
    },
    peg$c170 = /^[1-5]/,
    peg$c171 = peg$classExpectation([["1", "5"]], false, false),
    peg$c172 = function (num) {
      return parseInt(num)
    },
    peg$c173 = function () {
      throw new SyntaxError(
        "A course semester must be either a number between 1 [Fall] and 5 [Summer Session 2], or an asterisk [*].",
      )
    },
    peg$c174 = peg$anyExpectation(),
    peg$c175 = /^[A-Z]/,
    peg$c176 = peg$classExpectation([["A", "Z"]], false, false),
    peg$c177 = function (char) {
      return char
    },
    peg$c178 = "*",
    peg$c179 = peg$literalExpectation("*", false),
    peg$c180 = /^[a-z]/i,
    peg$c181 = peg$classExpectation([["a", "z"]], false, true),
    peg$c182 = function (chars) {
      return chars.join("")
    },
    peg$c183 = function (digits) {
      return parseInt(digits.join(""))
    },
    peg$c184 = /^[0-9]/,
    peg$c185 = peg$classExpectation([["0", "9"]], false, false),
    peg$c186 = "(",
    peg$c187 = peg$literalExpectation("(", false),
    peg$c188 = ")",
    peg$c189 = peg$literalExpectation(")", false),
    peg$c190 = "distinct",
    peg$c191 = peg$literalExpectation("distinct", false),
    peg$c192 = function (d) {
      return Boolean(d)
    },
    peg$currPos = 0,
    peg$savedPos = 0,
    peg$posDetailsCache = [{ line: 1, column: 1 }],
    peg$maxFailPos = 0,
    peg$maxFailExpected = [],
    peg$silentFails = 0,
    peg$result

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error(
        "Can't start parsing from rule \"" + options.startRule + '".',
      )
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule]
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos)
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos)
  }

  function expected(description, location) {
    location =
      location !== void 0 ? location : (
        peg$computeLocation(peg$savedPos, peg$currPos)
      )

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location,
    )
  }

  function error(message, location) {
    location =
      location !== void 0 ? location : (
        peg$computeLocation(peg$savedPos, peg$currPos)
      )

    throw peg$buildSimpleError(message, location)
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase }
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return {
      type: "class",
      parts: parts,
      inverted: inverted,
      ignoreCase: ignoreCase,
    }
  }

  function peg$anyExpectation() {
    return { type: "any" }
  }

  function peg$endExpectation() {
    return { type: "end" }
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description }
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos],
      p

    if (details) {
      return details
    } else {
      p = pos - 1
      while (!peg$posDetailsCache[p]) {
        p--
      }

      details = peg$posDetailsCache[p]
      details = {
        line: details.line,
        column: details.column,
      }

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++
          details.column = 1
        } else {
          details.column++
        }

        p++
      }

      peg$posDetailsCache[pos] = details
      return details
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
      endPosDetails = peg$computePosDetails(endPos)

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    }
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos
      peg$maxFailExpected = []
    }

    peg$maxFailExpected.push(expected)
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location)
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location,
    )
  }

  function peg$parseResult() {
    var s0

    s0 = peg$parseOr()

    return s0
  }

  function peg$parseExpression() {
    var s0, s1, s2, s3

    peg$silentFails++
    s0 = peg$currPos
    s1 = peg$parse_()
    if (s1 !== peg$FAILED) {
      s2 = peg$parseNot()
      if (s2 === peg$FAILED) {
        s2 = peg$parseParenthetical()
        if (s2 === peg$FAILED) {
          s2 = peg$parseCourse()
          if (s2 === peg$FAILED) {
            s2 = peg$parseWhere()
            if (s2 === peg$FAILED) {
              s2 = peg$parseOccurrence()
              if (s2 === peg$FAILED) {
                s2 = peg$parseOf()
                if (s2 === peg$FAILED) {
                  s2 = peg$parseModifier()
                  if (s2 === peg$FAILED) {
                    s2 = peg$parseReference()
                  }
                }
              }
            }
          }
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_()
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0
          s1 = peg$c1(s2)
          s0 = s1
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }
    peg$silentFails--
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c0)
      }
    }

    return s0
  }

  function peg$parseOptionalS() {
    var s0

    if (input.charCodeAt(peg$currPos) === 115) {
      s0 = peg$c2
      peg$currPos++
    } else {
      s0 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c3)
      }
    }
    if (s0 === peg$FAILED) {
      s0 = null
    }

    return s0
  }

  function peg$parseWhere() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10
